--- a/build.gradle
+++ b/build.gradle
@@ -40,9 +40,19 @@ dependencies {
     compile group: 'org.apache.camel', name: 'camel-core', version:property('camel.version')
     compile group: 'org.apache.camel', name: 'camel-spring-boot-starter', version:property('camel.version')
     compile group: 'org.apache.camel', name: 'camel-servlet-starter', version:property('camel.version')
+    compile group: 'org.apache.camel', name: 'camel-http4-starter', version:property('camel.version')
+
+    // camel components
+    compile group: 'org.apache.camel', name: 'camel-gson', version:property('camel.version')
+    compile group: 'org.apache.camel', name: 'camel-bindy', version:property('camel.version')
+    compile group: 'org.apache.camel', name: 'camel-ognl', version:property('camel.version')
+
+    // GSON
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 
     // spring boot test
     testCompile("org.springframework.boot:spring-boot-starter-test")
 
+    // camel test
     testCompile group: 'org.apache.camel', name: 'camel-test', version:property('camel.version')
 }
