--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile group: 'org.apache.camel', name: 'camel-gson', version:property('camel.version')
     compile group: 'org.apache.camel', name: 'camel-bindy', version:property('camel.version')
     compile group: 'org.apache.camel', name: 'camel-ognl', version:property('camel.version')
+    compile group: 'org.apache.camel', name: 'camel-ftp', version:property('camel.version')
 
     // GSON
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
@@ -55,4 +56,7 @@ dependencies {
 
     // camel test
     testCompile group: 'org.apache.camel', name: 'camel-test', version:property('camel.version')
+
+    // ftp test
+    testCompile group: 'org.mockftpserver', name: 'MockFtpServer', version: '2.3'
 }
